<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:id="@+id/main"
    android:orientation="vertical"
    android:gravity="center_horizontal|center_vertical" 
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    >

<SeekBar
    android:id="@+id/brightness"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:layout_marginLeft="30px"
    android:layout_marginRight="30px"
    android:layout_marginTop="1px"
    android:layout_marginBottom="1px"
    android:max="10000"    
    />
<RelativeLayout
	android:id="@+id/adjust_line"
	android:layout_width="fill_parent"
	android:layout_height="44sp">
<CheckBox
	android:id="@+id/lock"
	android:text="lock"
	android:layout_alignParentLeft="true"
	android:layout_alignParentTop="true"
	android:layout_centerVertical="true"
	android:layout_width="wrap_content"
	android:layout_height="fill_parent"/>
<Button
	android:id="@+id/plus"
	android:text="+"
	android:textSize="20sp"
	android:layout_width="48sp"	
	android:layout_height="fill_parent"
	android:layout_alignParentRight="true"
	android:layout_alignParentTop="true"
	android:onClick="setValueOnClick"
	/>	
<TextView 
    android:id="@+id/current_value" 
    android:layout_width="wrap_content" 
    android:layout_height="fill_parent"
    android:layout_toLeftOf="@id/plus"
    android:layout_centerHorizontal="true"
    android:paddingLeft="6sp"
    android:paddingRight="6sp"
    android:text="test"
    android:textSize="27sp"
    />
<Button
	android:id="@+id/minus"
	android:text="&#8722;"
	android:textSize="20sp"
	android:layout_width="48sp"	
	android:layout_height="fill_parent"
	android:layout_toLeftOf="@id/current_value"
	android:layout_alignParentTop="true"
	android:onClick="setValueOnClick"
	/>	
</RelativeLayout>
<LinearLayout 
    android:gravity="center_horizontal" 
    android:orientation="horizontal"
    android:layout_width="fill_parent"
    android:layout_height="60dip"
    >    
<Button 
	android:id="@+id/min"
	android:layout_weight="1"
    android:layout_width="0dip"
	android:layout_height="fill_parent"
	android:onClick="setValueOnClick"
	android:text="@string/min"/>
<Button 
	android:id="@+id/percent_25"
	android:layout_weight="1"
    android:layout_width="0dip"
	android:layout_height="fill_parent"
	android:onClick="setValueOnClick"
	android:text="@string/percent_25"/>
<Button 
	android:id="@+id/percent_50"
	android:layout_weight="1"
    android:layout_width="0dip"
	android:layout_height="fill_parent"
	android:onClick="setValueOnClick"
	android:text="@string/percent_50"/>
<Button 
	android:id="@+id/percent_75"
	android:layout_weight="1"
    android:layout_width="0dip"
	android:layout_height="fill_parent"
	android:onClick="setValueOnClick"
	android:text="@string/percent_75"/>
<Button 
	android:id="@+id/percent_100"
	android:layout_weight="1"
    android:layout_width="0dip"
	android:layout_height="fill_parent"
	android:onClick="setValueOnClick"
	android:text="@string/percent_100"
	/>
</LinearLayout>    

<LinearLayout 
    android:gravity="center_horizontal" 
    android:orientation="horizontal"
    android:layout_width="fill_parent"
    android:layout_height="60dip">
<Button
	android:id="@+id/led"
	android:layout_weight="1"
    android:layout_width="0dip"
	android:layout_height="fill_parent"
	android:text="@string/led"
	android:onClick="contextMenuOnClick"
	/>
<Button
	android:id="@+id/cf3d_nightmode"
	android:layout_weight="1"
    android:layout_width="0dip"
	android:layout_height="fill_parent"
	android:text="@string/cf3d_nightmode_button"
	android:onClick="contextMenuOnClick"
	/>
</LinearLayout>
<TextView 
    android:layout_width="fill_parent" 
    android:layout_height="wrap_content"
    android:text="@string/custom_buttons"
    />
<LinearLayout 
    android:gravity="center_horizontal" 
    android:orientation="horizontal"
    android:layout_width="fill_parent"
    android:layout_height="60dip">
<Button
	android:id="@+id/custom0"    
	android:layout_weight="1"
    android:layout_width="0dip"
	android:layout_height="fill_parent"
	android:text="@string/custom0"
	android:onClick="customLoad"
	android:longClickable="true"/>
<Button
	android:id="@+id/custom1"    
	android:layout_weight="1"
    android:layout_width="0dip"
	android:layout_height="fill_parent"
	android:text="@string/custom1"
	android:onClick="customLoad"
	android:longClickable="true"/>
<Button
	android:id="@+id/custom2"    
	android:layout_weight="1"
    android:layout_width="0dip"
	android:layout_height="fill_parent"
	android:text="@string/custom2"
	android:onClick="customLoad"
	android:longClickable="true"/>
<Button
	android:id="@+id/custom3"    
	android:layout_weight="1"
    android:layout_width="0dip"
	android:layout_height="fill_parent"
	android:text="@string/custom3"
	android:onClick="customLoad"
	android:longClickable="true"/>
<Button
	android:id="@+id/custom4"    
	android:layout_weight="1"
    android:layout_width="0dip"
	android:layout_height="fill_parent"
	android:text="@string/custom4"
	android:onClick="customLoad"
	android:longClickable="true"/>
</LinearLayout>
</LinearLayout>
